# RunHaven

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  current-state.md  feature_list.json  init.ps1  init.sh  pins.toml  progress.md  pyproject.toml  requirements-dev.txt  session-handoff.md
.agents/skills/codex-tui/: SKILL.md
.agents/skills/harness/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/runhaven/: Cargo.toml
crates/runhaven-cli/: Cargo.toml
crates/runhaven-cli/src/: app.rs
crates/runhaven-core/src/: diagnostics.rs  ui_contracts.rs
crates/runhaven-tui/: Cargo.toml
crates/runhaven-tui/src/: lib.rs
crates/runhaven/src/: main.rs
docs/: APPLE_CONTAINER_GAP_ANALYSIS.md  ARCHITECTURE.md  AUTH_BROKER.md  CAPABILITIES.md  CLI_SURFACE_COVERAGE.md  HARNESS_EVALUATION.md  INSTALLATION.md  NON_UI_BACKLOG.md  PINNING.md  PROVIDER_ENDPOINTS.md  RELEASE_GAP_ANALYSIS.md  RESEARCH.md  ROADMAP.md  SECURITY_MODEL.md  TAURI_LOG_VIEWING_DESIGN.md  TAURI_UI_GUARDRAILS.md  TAURI_UI_RESEARCH_PLAN.md  USAGE.md  V1_RELEASE_PLAN.md
docs/assets/cubby-pet/: review.json  run-summary.json  validation.json
docs/assets/terminal-mascot/: cubby-halfblock-16x18-ansi256.ansi  cubby-halfblock-24x26-ansi256.ansi  cubby-halfblock-32x36-ansi256.ansi  cubby-halfblock-40x44-ansi256.ansi  cubby-halfblock-48x52-ansi256.ansi  manifest.json
docs/harness/: README.md  agent-operating-model.md  authoritative-facts.md  change-contract.md  component-inventory.md  dependency-change-policy.md  entropy-control.md  evidence-log.md  external-project-ideas.md  feature-privacy-labels.json  first-agent-task.md  manifest.json  modularization-plan.md  quality-document.md  release-controls.md  research-inbox.md  research-sources.json  roadmap.md  security-boundary-map.md  self-healing.md  sensor-registry.md  source-mined-ideas.md  source-record-example.json  source-record.schema.json  sources.md  ux-research-ideas.md  verification-matrix.md
docs/harness/boundaries/: change-contract.md  component-inventory.md  dependency-change-policy.md  feature-privacy-labels.json  security-boundary-map.md
docs/harness/evidence/: evidence-log.md
docs/harness/feedback/: quality-document.md  sensor-registry.md  verification-matrix.md
docs/harness/operations/: agent-operating-model.md
docs/harness/release/: apple-container-update-playbook.md  release-controls.md
docs/harness/research/: source-mined-ideas.md  sources.md  ux-research-ideas.md
docs/harness/state/: entropy-control.md  first-agent-task.md  modularization-plan.md  roadmap.md
docs/plans/: ratatui-brand-graphics.md  tui-architecture.md  tui-build-plan.md  tui-codex-vendor-reset.md
docs/plans/codex-tui-strategy-c/: 01-source-inventory.md  02-vendoring-and-protocol.md  03-runtime-wiring.md  04-implementation-and-verification.md  README.md  (+1 more)
images/antigravity/: Containerfile
images/base/: Containerfile
images/claude/: Containerfile  package-lock.json  package.json
images/codex/: Containerfile  package-lock.json  package.json
images/common/: create-agent-user.sh
images/copilot/: Containerfile  package-lock.json  package.json
images/gemini/: Containerfile  package-lock.json  package.json
scripts/: apple_container_smoke.sh  check_pins.py  cli_surface_check.sh  codex_broker_smoke.py  compare-codex-tui.sh  provider_egress_smoke.py
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: folder-pick.json  launch-run.json  main-read.json  run-control.json
src-tauri/src/: capability_guard.rs  contracts.rs  lib.rs  main.rs
src-tauri/src/commands/: diagnostics.rs  image_status.rs  log_snapshot.rs  mod.rs  run_control.rs  run_status.rs  tests.rs  validation.rs  warnings.rs
src/macos_container_agents/: __init__.py  cli.py  images.py  plans.py  profiles.py
src/runhaven/: __init__.py  active_commands.py  active_records.py  auth_broker.py  auth_profiles.py  cache_paths.py  cli.py  cli_parser.py  diagnostic_commands.py  diagnostics.rs  doctor.py  egress.py  image_commands.py  images.py  mod.rs  network_commands.py  plans.py  profiles.py  project_checks.py  provider_endpoints.py  provider_observability.py  provider_runtime.py  run_history.py  session_state.py  setup_guide.py  ui_contracts.rs  validators.py  worktree_lifecycle.py  worktrees.py
tests/: cli.rs  cli_test_helpers.py  test_auth_broker.py  test_cli.py  test_cli_active_attach_logs.py  test_cli_active_commands.py  test_cli_active_list.py  test_cli_active_repair.py  test_cli_active_status.py  test_cli_active_stop_kill.py  test_cli_diagnostics.py  test_cli_image.py  test_cli_network.py  test_cli_provider_runtime.py  test_cli_run_history.py  test_cli_runs_diff.py  test_cli_runs_list_show.py  test_cli_runs_log.py  test_cli_standard_run.py  test_cli_state.py  test_cli_worktree_lifecycle.py  test_codex_broker_smoke.py  test_doctor.py  test_egress.py  test_images.py  test_plans.py  test_provider_egress_smoke.py  test_repo_policy.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: app.spec.ts
ui/src/: main.ts
(+193 files in other folders)
