[package]
name = "runhaven"
version = "0.5.0"
edition = "2024"
default-run = "runhaven"
license = "MIT"
publish = false
description = "Run AI coding agents inside Apple container on macOS."
authors = ["Chad Boyd"]
keywords = ["ai-agents", "apple-container", "macos", "runhaven", "sandbox", "security"]

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
idna = "=1.1.0"
image = { version = "=0.25.10", default-features = false, features = ["png", "webp"] }
ipnet = "=2.12.0"
ratatui = { version = "=0.30.2", features = ["unstable-backend-writer", "unstable-widget-ref", "unstable-rendered-line-info"] }
regex = "=1.12.4"
reqwest = { version = "=0.13.4", features = ["blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
sha2 = "=0.11.0"
supports-color = "=3.0.2"
textwrap = "=0.16.2"
time = { version = "=0.3.51", features = ["formatting", "parsing"] }
tokio = { version = "=1.52.3", features = ["macros", "rt", "sync", "test-util", "time"] }
tokio-util = { version = "=0.7.18", features = ["time"] }
toml = "=1.1.2"
tracing = "=0.1.44"
unicode-segmentation = "=1.13.3"
unicode-width = "=0.2.2"
ureq = "=3.3.0"
url = "=2.5.8"
uuid = { version = "=1.23.3", features = ["v4"] }
vt100 = "=0.16.2"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
insta = { version = "=1.48.0", default-features = false }
itertools = "=0.14.0"
pretty_assertions = "=1.4.1"
serial_test = "=3.5.0"
tempfile = "=3.27.0"
