[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-container-agents"
version = "0.1.0"
description = "Run AI coding agents inside Apple container sandboxes on macOS."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chad Boyd" }]
keywords = ["ai-agents", "apple-container", "macos", "sandbox", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==2.1.0",
  "pytest==9.1.0",
  "ruff==0.15.17",
]

[project.scripts]
mca = "macos_container_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
macos_container_agents = ["images/*/Containerfile", "images/*/package.json", "images/*/package-lock.json", "images/common/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
